gcc/testsuite/rust/rustc/ui/vector-no-ann.rs
fn main() {
    let _foo = Vec::new();
// { dg-error ".E0282." "" { target *-*-* } .-1 }
}

